--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/side.jpg);">
+				   	<li style="background-image: url(images/side.jpeg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
