--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about2.jpeg)"></div>
+				<div class="author-img" style="background-image: url(images/about2.jpg)"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Aditya Kumar</a></h1>
 				<span class="position"><a href="#">Web Developer</a></span>
 			</div>
@@ -94,7 +94,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/WhatsApp Image 2024-08-30 at 10.56.31.jpeg);">
+				   	<li style="background-image: url(images/about2.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -110,7 +110,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url(images/WhatsApp Image 2024-08-30 at 10.56.31.jpeg);">
+				   	<li style="background-image: url(images/about2.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
