--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about2.jpg)"></div>
+				<a href='/'><div class="author-img" style="background-image: url(images/about2.jpg)"></div></a>
 				<h1 id="colorlib-logo"><a href="index.html">Aditya Kumar</a></h1>
 				<span class="position"><a href="#">Web Developer</a></span>
 			</div>
@@ -94,7 +94,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/side.jpg);">
+				   	<li>
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -110,7 +110,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url(images/WhatsApp-Image-2024-08-29-at-22.43.54.jpg);">
+				   	<li">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -516,7 +516,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 										<h3><a href="work.html">Project 04</a></h3>
 										<span>Simon Game</span>
 										<p class="icon">
-											<span><a href="https://github.com/Asjdnnc/Simon-Game"><i class="fa-brands fa-github"></i></a></span>
+											<span><a href="https://asjdnnc.github.io/Simon-Game"><i class="fa-brands fa-github"></i></a></span>
 											<span><a><i class="icon-eye"></i><span id="view4">30</span></a></span>
 											<span><a><i id="heart4" class="icon-heart"></i><span id="like4">20</span></a></span>
 										</p>
