--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>Hi! <br>I'm Aditya</h1>
-						   					<h2>MERN stack Developer</h2>
-												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+						   					<h1 style="color:white;">Hi! <br>I'm Aditya</h1>
+						   					<h2 style="color:white;">MERN stack Developer</h2>
+												<p><a style="color:white;" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -117,9 +117,9 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>I am <br>a Coder</h1>
-												<p><a href='https://github.com/Asjdnnc' class="btn btn-primary btn-learn">View Github <i class="fa-brands fa-github"></i></a></p><br>
-												<p><a href='https://leetcode.com/u/aditya05yt/' class="btn btn-primary btn-learn">View Leetcode <i class="fa-solid fa-code"></i></a></p>
+						   					<h1 style="color:white;">I am <br>a Coder</h1>
+												<p><a href='https://github.com/Asjdnnc' style="color:white;" class="btn btn-primary btn-learn">View Github <i class="fa-brands fa-github"></i></a></p><br>
+												<p><a href='https://leetcode.com/u/aditya05yt/' style="color:white; " class="btn btn-primary btn-learn">View Leetcode <i class="fa-solid fa-code"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
