--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 							<div class="project" style="background-image: url(images/simon.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Project 04</a></h3>
+										<h3><a href="https://asjdnnc.github.io/Simon-Game/">Project 04</a></h3>
 										<span>Simon Game</span>
 										<p class="icon">
 											<span><a href="https://github.com/Asjdnnc/Simon-Game"><i class="fa-brands fa-github"></i></a></span>
