--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<span class="heading-meta">About Us</span>
+										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Hi I'm Aditya Kumar</strong> a passionate and motivated Computer Science student with a keen interest in software development and technology innovation. Currently pursuing my Bachelor's degree in Computer Science at IIIT Sonepat, Haryana. I have been immersing myself in various programming languages like Python, Java, and C++. My coursework will provide me with a strong foundation in algorithms, data structures, and object-oriented design, and I'm eager to apply these skills to real-world challenges.</p>
 									</div>
@@ -173,7 +173,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>I am happy to tell you <br>that i have solved 300+ DSA question sucessfully!</h2>
-										<a href="#" class="btn-hire">Hire me</a>
+										<a href="mailto:aditya05yt@gmail.com"" class="btn-hire">Hire me</a>
 									</div>
 								</div>
 							</div>
@@ -619,7 +619,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+9185212213XX</a></p>
+									<p><a href="tel://">+918521221XXX</a></p>
 								</div>
 							</div>
 						</div>
