--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small> <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-<!-- Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved. Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Aditya</a>
-Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </span> <span>Distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a></span> <span>Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash.com</a></span></small></p> -->
-				<ul>
+				<p><small> 
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
@@ -103,7 +100,7 @@ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </
 					   					<div class="desc">
 						   					<h1 style="color:white;">Hi! <br>I'm Aditya</h1>
 						   					<h2 style="color:white;">MERN stack Developer</h2>
-												<p><a style="color:white;" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+												<p><a href="images/Aditya Kumar (resume).docx" style="color:white;" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
