--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					   					<div class="desc">
 						   					<h1 style="color:white;">Hi! <br>I'm Aditya</h1>
 						   					<h2 style="color:white;">MERN stack Developer</h2>
-												<p><a href="images/Aditya Kumar (resume).docx" style="color:white;" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+												<p><a href="images/Aditya Kumar (Resume).pdf" style="color:white;" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
