--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about2.jpg)"></div>
+				<div class="author-img" style="background-image: url(images/about2.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Aditya Kumar</a></h1>
 				<span class="position"><a href="#">Web Developer</a></span>
 			</div>
@@ -76,6 +76,15 @@
 				</div>
 			</nav>
 
+			<div class="colorlib-footer">
+				<p><small> 
+				<ul>
+					<li><a href="#"><i class="icon-facebook2"></i></a></li>
+					<li><a href="#"><i class="icon-twitter2"></i></a></li>
+					<li><a href="#"><i class="icon-instagram"></i></a></li>
+					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+				</ul>
+			</div>
 
 		</aside>
 
@@ -83,23 +92,23 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/pho.jpg);">
+				   	<li style="background-image: url(images/cover2.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1 style="color:white;">Hi! <br>I'm Aditya</h1>
-						   					<h2 style="color:white;">MERN stack Developer</h2>
-												<p><a href="images/Aditya Kumar (Resume).pdf" style="color:white;" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
-											</div>
+											<h1 style="color:white;">Hi! <br>I'm Aditya</h1>
+											<h2 style="color:white;">MERN stack Developer</h2>
+											 <p><a href="images/Aditya Kumar (Resume).pdf" style="color:white;" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+										 </div>
 					   				</div>
 					   			</div>
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url(images/WhatsApp-Image-2024-08-29-at-22.43.54.jpg);">
+				   	<li style="background-image: url(images/cover.avif);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -107,8 +116,9 @@
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1 style="color:white;">I am <br>a Coder</h1>
-												<p><a href='https://github.com/Asjdnnc' style="color:white;" class="btn btn-primary btn-learn">View Github <i class="fa-brands fa-github"></i></a></p><br>
-												<p><a href='https://leetcode.com/u/aditya05yt/' style="color:white; " class="btn btn-primary btn-learn">View Leetcode <i class="fa-solid fa-code"></i></a></p>
+												<p><a href='https://github.com/Asjdnnc' class="btn btn-primary btn-learn" style="color:white;">Github <i class="fa-brands fa-github"></i></a></p><br>
+												<p><a href='https://leetcode.com/u/aditya05yt/' class="btn btn-primary btn-learn" style="color:white;">Leetcode <i class="fa-solid fa-code"></i></a></p><br>
+												<p><a href='https://www.linkedin.com/in/aditya05yt/' class="btn btn-primary btn-learn" style="color:white;">LinkedIn <i class="fa-brands fa-linkedin-in"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -126,7 +136,7 @@
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<span class="heading-meta">About Me</span>
+										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Hi I'm Aditya Kumar</strong> a passionate and motivated Computer Science student with a keen interest in software development and technology innovation. Currently pursuing my Bachelor's degree in Computer Science at IIIT Sonepat, Haryana. I have been immersing myself in various programming languages like Python, Java, and C++. My coursework will provide me with a strong foundation in algorithms, data structures, and object-oriented design, and I'm eager to apply these skills to real-world challenges.</p>
 									</div>
@@ -161,7 +171,7 @@
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to tell you <br>that i have solved 300+ DSA question sucessfully!</h2>
+										<h2>I am happy to tell you <br>that i have solved 350+ DSA question sucessfully!</h2>
 										<a href="mailto:aditya05yt@gmail.com"" class="btn-hire">Hire me</a>
 									</div>
 								</div>
@@ -189,7 +199,7 @@
 								</span>
 								<div class="desc">
 									<h3>Innovative Ideas</h3>
-									<p>Developed creative solutions for complex problems, including optimized algorithms, unique application designs and effective code.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+									<p>Developed creative solutions for complex problems, including optimized algorithms, unique application designs and effective code.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 								</div>
 							</div>
 						</div>
@@ -230,7 +240,7 @@
 							<span class="colorlib-counter-label">Cups of coffee</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="12" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="20" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
@@ -449,15 +459,16 @@
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="https://codolio.com/profile/ko8lefQX" class="active">DSA</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Web Application</a></span></p>
+							<p class="work-menu"><span><a href="https://codolio.com/profile/asjdnnc/card" class="active">DSA</a></span> <span><a href="">Web Design</a></span> <span><a href="">Software</a></span> <span><a href="">Web Application</a></span></p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<a href="https://majorproject-0elt.onrender.com/listings">
 							<div class="project" style="background-image: url(images/Screenshot\ 2024-08-23\ at\ 4.16.00\ PM.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://majorproject-0elt.onrender.com/listings">Project 01</a></h3>
+										<h3>Project 01</a></h3>
 										<span>Wanderstay</span>
 										<p class="icon">
 											<span><a href="https://github.com/Asjdnnc/majorProject/tree/master"><i class="fa-brands fa-github"></i></a></span>
@@ -467,28 +478,14 @@
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/login.png);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="#">Project 02</a></h3>
-										<span>Login Authentication</span>
-										<p class="icon">
-											<span><a href="https://github.com/Asjdnnc/LoginPage"><i class="fa-brands fa-github"></i></a></span>
-											<span><a><i class="icon-eye"></i><span id="view2">30</span></a></span>
-											<span><a><i id="heart2" class="icon-heart"></i><span id="like2">20</span></a></span>
-										</p>
-									</div>
-								</div>
-							</div>
+							</a>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/camera.png);">
+							<div class="project" style="background-image: url(images/face.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://asjdnnc.github.io/camera/">Project 03</a></h3>
-										<span>Camera</span>
+										<h3><a href="https://face-recognition-kshe.onrender.com/">Project 02</a></h3>
+										<span>Face-Recognition</span>
 										<p class="icon">
 											<span><a href="https://github.com/Asjdnnc/camera"><i class="fa-brands fa-github"></i></a></span>
 											<span><a><i class="icon-eye"></i><span id="view3">30</span></a></span>
@@ -498,12 +495,42 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/marvel.png);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="#">Project 03</a></h3>
+										<span>Marvel Movies</span>
+										<p class="icon">
+											<span><a href="https://marvel-phi-three.vercel.app"><i class="fa-brands fa-github"></i></a></span>
+											<span><a><i class="icon-eye"></i><span id="view2">30</span></a></span>
+											<span><a><i id="heart2" class="icon-heart"></i><span id="like2">20</span></a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+							<div class="project" style="background-image: url(images/recommend.png);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="https://github.com/Asjdnnc/movies_recommendation">Project 04</a></h3>
+										<span>Movies Recommendation</span>
+										<p class="icon">
+											<span><a href="https://github.com/Asjdnnc/movies_recommendation"><i class="fa-brands fa-github"></i></a></span>
+											<span><a><i class="icon-eye"></i><span id="view4">30</span></a></span>
+											<span><a><i id="heart4" class="icon-heart"></i><span id="like4">20</span></a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 							<div class="project" style="background-image: url(images/simon.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://asjdnnc.github.io/Simon-Game/">Project 04</a></h3>
-										<span>Simon Game</span>
+										<h3><a href="work.html">Project 05</a></h3>
+										<span></span>
 										<p class="icon">
 											<span><a href="https://github.com/Asjdnnc/Simon-Game"><i class="fa-brands fa-github"></i></a></span>
 											<span><a><i class="icon-eye"></i><span id="view4">30</span></a></span>
@@ -514,11 +541,11 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-5.jpg);">
+							<div class="project" style="background-image: url(images/camera.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Project 05</a></h3>
-										<span>Chat Website</span>
+										<h3><a href="https://asjdnnc.github.io/camera/">Project 05</a></h3>
+										<span>Camera Website</span>
 										<p class="icon">
 											<span><a href=""><i class="fa-brands fa-github"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -608,7 +635,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+918521221XXX</a></p>
+									<p><a href="tel://">+9185212213XX</a></p>
 								</div>
 							</div>
 						</div>
