--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					   					<div class="desc">
 											<h1 style="color:white;">Hi! <br>I'm Aditya</h1>
 											<h2 style="color:white;">MERN stack Developer</h2>
-											 <p><a href="https://drive.google.com/file/d/1rpTWM0CZLXNqEjYE_JpXmY0usPUh9wzU/view?usp=drive_link" style="color:white;" class="btn btn-primary btn-learn">View Resume <i class="icon-download4"></i></a></p>
+											 <p><a href="https://drive.google.com/file/d/1tw_QZ0WRvKSJEPewjAPBORuczdrHC0uz/view?usp=sharing" style="color:white;" class="btn btn-primary btn-learn">View Resume <i class="icon-download4"></i></a></p>
 										 </div>
 					   				</div>
 					   			</div>
