--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 											<h1 style="color:white;">Hi! <br>I'm Aditya</h1>
-											<h2 style="color:white;">MERN stack Developer</h2>
+											<h2 style="color:white;">Full stack Developer</h2>
 											 <p><a href="https://drive.google.com/file/d/1ZEH2qZOG9MjY6Cw16BbI-iP9pqFf0l1e/view?usp=sharing" style="color:white;" class="btn btn-primary btn-learn">View Resume <i class="icon-download4"></i></a></p>
 										 </div>
 					   				</div>
